@@ -10,6 +10,7 @@ MergeFonts("parmesan20.pfa");
 MergeFonts("feta-nummer10.pfa");
 MergeFonts("feta-din14.pfa");
 MergeKern("feta-din14.tfm");
+
 LoadTableFromFile("LILC", "feta20.otf-table")
 i = 0;
 while (i < CharCnt())
@@ -17,5 +18,6 @@ while (i < CharCnt())
   SetUnicodeValue(i + 0xF000, 0);
   ++i;
 endloop
+
 Generate("bigcheese20.otf");
 Generate("bigcheese20.cff");
